--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,7 +26,7 @@ body {
 }
 /* desde aqui se inicia con el estilo del formulario de inisio de sesion*/
 .login-container {
-    background: white;
+    background: rgb(177, 169, 169);
     padding: 150px;
     border-radius: 80px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
