Descripción breve del cambio realizado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -106,3 +106,10 @@ button:hover {
 .texto_pagina{
     text-align: center;
 }
+/* estilos para lapagina deregistro*/
+
+.registro .logo {
+    position: absolute;
+    top: 700px; /* Ajusta según necesites */
+    left:90px; /* Ajusta según necesites */
+}
