--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,14 +29,14 @@ body {
 /* Solo aplica si el body tiene la clase "inicio"  y aplica solo para el formulario de iniciar sesion*/
 body.inicio .login {
     background: rgb(177, 169, 169);
-    padding: 20px;
+    padding: 30px;
     border-radius: 40px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     width: 300px;
     text-align: center;
     margin-top: 150px;
-    margin-left: auto;
-    margin-right: 70px;
+    margin-left: 1050px;
+    margin-right: 50px;
 }
 
 /* Inputs del formulario de inicio de sesión */
